fix(CollectionDigest): revise spacing
ref:
2024-03-product#2-ZN-018

--- a/src/components/CollectionDigest/AuthorSidebar/styles.module.css
+++ b/src/components/CollectionDigest/AuthorSidebar/styles.module.css
@@ -2,8 +2,12 @@
   display: flex;
   gap: var(--spacing-xx-tight);
   align-items: flex-start;
-  margin-top: var(--spacing-tight);
-  margin-bottom: var(--spacing-tight);
+  margin-top: var(--spacing-base);
+  margin-bottom: var(--spacing-base);
+
+  & > a {
+    flex-grow: 1;
+  }
 
   & header {
     font-size: var(--font-size-sm);
